# picosystem-boilerplate

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
game/: CMakeLists.txt  main.cpp
game/assets/: CMakeLists.txt
tools/: build-spritesheet.sh
